Support structured startup choices and staged input uploads